gatekeeper-policies/constraints/deployments-no-geo-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitedLabels
metadata:
  name: deployments-must-not-have-geo-us-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment"]
  parameters:
    labels: ["geo-US"]
