gatekeeper-policies/constraints/final-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitedLabels
metadata:
  name: final-no-db-in-us
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
