gatekeeper-policies/constraints/modified-deployments-no-geo-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitedLabels
metadata:
  name: deployments-must-not-have-geo-us-label
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    labelCategory: ["cat-DB"]
    labelCountry: ["geo-US"]
