gatekeeper-policies/constraints/updated-no-db-in-us-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitedLabels
metadata:
  name: no-db-in-us
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    prohibitedLabels:
      - key: "cat"
        value: "DB"
      - key: "geo"
        value: "US"
